--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <div class="row">
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" class="alignnone size-full wp-image-14275" src="https://lastoffer.net/media/2024/01/lan-med-svag-kreditvardighet..webp" alt="Lån med svag kreditvärdighet" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" class="alignnone size-full wp-image-14275" src="https://lastoffer.net/media/2024/01/lan-med-svag-kreditvardighet.webp" alt="Lån med svag kreditvärdighet" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -851,7 +851,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 </h2>
 </div>
 <div class="cell">
-<img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="https://lastoffer.net/media/glodlampa..webp" alt="Förklaring: lån med svag kreditvärdighet" /><br />
+<img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="https://lastoffer.net/media/glodlampa.webp" alt="Förklaring: lån med svag kreditvärdighet" /><br />
 Vi börjar med att konstatera att lån med en svagare kreditvärdighet är speciallån för <span class="gulmark">alla som drabbats av en låg kreditscore</span>.</p>
 <p>Det är vår erfarenhet att dåligt kreditbetyg kan bero på mängder av orsaker, inklusive försenade betalningar, många skulder eller tidigare betalningsproblem men det behöver inte betyda att man inte klarar av ett lån.</p>
 <p>En mindre bra kreditvärdighet gör dock att man direkt placeras i kategorin för personer som statistiskt sett ofta får framtida betalningsproblem.</p>
@@ -992,7 +992,7 @@ Vi börjar med att konstatera att lån med en svagare kreditvärdighet är speci
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar lån med svag kreditvärdighet</h3>
-<p><img decoding="async" src="https://lastoffer.net/media/thumbs_up..webp" alt="Positiva egenskaper lån med svag kreditvärdighet"></p>
+<p><img decoding="async" src="https://lastoffer.net/media/thumbs_up.webp" alt="Positiva egenskaper lån med svag kreditvärdighet"></p>
 <ul>
 <li><strong>Tillgänglighet för fler låntagare:</strong> Lån för dem med svag kreditvärdighet öppnar dörren till finansiering även för de som annars skulle bli nekade av traditionella långivare.</li>
 <li><strong>Snabbare ansökningsprocess:</strong> Många långivare som erbjuder lån till personer med låg kreditvärdighet har förenklade och snabba ansökningsförfaranden, vilket innebär snabbare tillgång till kapital.</li>
@@ -1010,7 +1010,7 @@ Vi börjar med att konstatera att lån med en svagare kreditvärdighet är speci
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar lån med svag kreditvärdighet</h3>
-<p><img decoding="async" src="https://lastoffer.net/media/thumbs_down..webp" alt="Negativa egenskaper mikrolån utan uc"></p>
+<p><img decoding="async" src="https://lastoffer.net/media/thumbs_down.webp" alt="Negativa egenskaper mikrolån utan uc"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Lån för personer med svag kreditvärdighet kommer ofta med avsevärt högre räntesatser, vilket ökar den totala kostnaden för lånet.</li>
 <li><strong>Strängare villkor:</strong> Långivare kan erbjuda mindre flexibla och mer restriktiva villkor, vilket kan innebära kortare återbetalningstider eller högre avgifter vid försenade betalningar.</li>
